chore: aplicar cambios pendientes
